# trace-diff

./: .gitignore  Cargo.toml  README.md  architecture.md  baseline.json  candidate.json  erosion-trace-diff.html  make.ts
src/: diff.rs  lib.rs  match_trees.rs  model.rs  trace_diff_app.html  trace_template.html  wasm.rs  web.rs
tests/: integration.rs
tests/fixtures/: datadog_baseline.json  datadog_candidate.json  otlp_baseline.json  otlp_candidate.json
