[package]
name = "trace-diff"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
